# qotd

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
.next/: trace
.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @radix-ui.js  @swc.js  class-variance-authority.js  clsx.js  lucide-react.js  next-themes.js  next.js  tailwind-merge.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/webpack/: webpack.cb601b92dbe78091.hot-update.js
.next/types/app/: layout.ts  (+1 more)
app/: globals.css  layout.tsx  page.tsx
components/: FavoriteButton.tsx  FavoritesView.tsx  QuoteDisplay.tsx  RefreshButton.tsx  ThemeToggle.tsx
data/: quotes.csv  quotes.json
docs/: FEATURES.md  GIT_HISTORY_POLICY.md  ROADMAP.md
docs/project/: BACKLOG.md
docs/system/: ARCHITECTURE.md  OPERATIONS.md
hooks/: useFavorites.ts
lib/: constants.ts
old_python_app/: main.py  requirements.txt  setup.py
old_python_app/src/: quote_manager.py
old_python_app/tests/: test_quote_manager.py
scripts/: dead-code-check.mjs  validate-quotes.py
src/: main.py
src/ui/: window.py
tests/: api-random-quote.test.ts  app-shell.test.tsx  components.test.tsx  lib.test.ts  theme-provider.test.tsx  theme-toggle.test.tsx  ui.test.tsx
types/: quote.ts
(+9 files in other folders)
